assets/css/style.css
/*Google fonts import*/
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/*Asterisk overrides all styles. Low specificity so this can be easilly overridden*/
* {
    /*Color variables. Used to easily switch colors if needed. See comment related to darkmode on the bottom*/
    --background-color: #eff0f3;
    --background-color-2: #e9d6c9;
    --heading-color: #0d0d0d;
    --paragraph-color: #2a2a2a;
    --paragraph-color-2: #1b1b1b;
    --accent-color: #ff8e3c;
    --border-color: #2a2a2ae8;
    --shadow-color: #2a2a2a15;
    /*Overlays. Used to create more contrast between elements, especially images*/
    --overlay-color: #4b0000ad;
    --darken-color: rgba(0, 0, 0, 0.5);


    /*Overrides default settings*/
    margin: 0;
    padding: 0;
    border: 0;
    box-sizing: border-box;

    /*Sets font for entire page. Easily overriden*/
    font-family: 'Roboto', sans-serif;
}

/*General Styles*/
body {
    /*Makes sure the page takes up at least the whole viewport*/
    min-height: 100vh;
    width: 100vw;
    /*Required to make the main content take up any unused space*/
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
}

/*Each section by default will have a margin to create space for better readability*/
section {
    margin-bottom: 80px;
}

/*H1 is used exclusively for the logo text*/
h1,
h2 {
    color: var(--heading-color);
    font-size: 2rem;
}

h3 {
    color: var(--heading-color);
    font-size: 1.5rem;
}

h4 {
    color: var(--heading-color);
    font-size: 16px;
    font-weight: 400;
}

p {
    color: var(--paragraph-color);
    font-size: 16px;
    font-weight: 400;
}

li {
    list-style-type: none;
}

a {
    text-decoration: none;
    color: var(--heading-color);
}

hr {
    height: 2rem;
}

/*General classes that can be used all over*/
.icon-align-bottom {
    vertical-align: bottom;
}

.hidden {
    display: none;
}

/*Elements with this class will be hidden on desktop*/
.desktop-hidden {
    display: inherit;
}

/*Applies a slightly lighter color*/
.background-color-2 {
    background-color: var(--background-color-2);
    padding: 1rem;
}

.center {
    display: flex;
    justify-content: center;
}

/*Appplies display:flex to the item and centers the content vertically*/
.vertical-center-flex {
    display: flex;
    align-content: center;
}

.center-text {
    text-align: center;
}

/*Text with this class will be white*/
.white {
    color: #eff0f3;
    text-decoration-color: #eff0f3 !important;
}

/*As a general rule, unrelated paragraph and headings should have 2x the margin as related ones*/
/*This makes it easier to distinguish the related and unrelated sections in larger blocks of texts*/
.text-margin-x1 {
    margin-top: 1rem;
}

.text-margin-x2 {
    margin-top: 2rem;
}

/*This is applied to the parent element of a heading to make it underlined in a specific style. Used on the hero image texts*/
.lined-heading {
    text-align: center;
    font-size: 1.5em;
    text-decoration: underline;
    text-decoration-thickness: 3px;
    text-underline-offset: 5px;
    text-decoration-color: #eff0f3;
}

.lined-heading h2 {
    font-size: 2rem;
    color: #eff0f3;
}

/*An overlay that darkens the color*/
.darker {
    background-color: var(--darken-color);
    width: 100%;
    height: 100%;
}


/*Header*/
header {
    background-color: var(--background-color);
    padding: 5px 0;
    position: fixed;
    z-index: 99;
    width: 100%;
    display: flex;

    border-bottom: var(--border-color) solid 2px;
    box-shadow: 0px 1px 5px 5px var(--shadow-color);
}

/*Navbar styles*/
/*Generic elements*/
nav {
    /*Doesn't display by default*/
    display: none;
    position: absolute;
    left: 0;
    width: 100%;
    top: 0;
    transition: all 0.3s;
    align-items: flex-end;
}

/*IDs*/
/*The page the user is currently on will be underlined in the navbar*/
#active {
    text-decoration: underline;
    text-decoration-thickness: 2px;
    text-underline-offset: 1px;
    text-decoration-color: var(--heading-color);
}

/*The text next to the logo*/
#logo-text {
    font-size: 1.2em;
    margin-left: 5px;
    width: 70px;
    margin-top: 0;
    color: var(--heading-color);
}

#logo {
    margin-left: 10px;
    height: 3em;
}

/*Used on logo links to redirect to the home page*/
#logo a {
    display: inline-block;
    height: 0;
}

#logo a img {
    width: 3em;
}

/*Exclusive to the logo image at the bottom of the about us page*/
#logo-about-section {
    display: block;
    width: 80%;
    max-width: 300px;
    margin: auto;
    margin-bottom: 80px;
}

/*Container of the navbar items*/
#menu {
    width: 100%;
    text-align: right;
    background-color: var(--background-color);
    border-radius: 0 0 10px 10px;
    border-bottom: var(--border-color) solid 2px;
    box-shadow: 0px 1px 5px 5px var(--shadow-color);
}

#menu li {
    border-top: var(--border-color) solid 2px;
    padding: 10px;
}

#menu li h3 {
    margin: 0;
    width: 100%;
}

#menu li a {
    display: flex;
    align-items: flex-end;
    margin-right: 10px;
}

/*Uses flex to position the hamburger menu correctly*/
#hamburger-menu-container {
    display: flex;
    justify-content: flex-end;
    width: 100%;
    margin-right: 10px;
}

/*Hambrurger icon style*/
#hamburger-menu-icon span {
    font-size: 3em;
    color: var(--heading-color);
}

/*Checking the hamburger menu box will style the navbar*/
#hamburger-menu-toggle:checked~nav {
    /*Menu displays when the checkbox is pressed*/
    display: block;
    top: 100%;
    transition: all 0.3s;
}

/*Main content*/
/*General styles*/
main {
    background-color: var(--background-color);
    /*Makes the main element take up any unused space*/
    flex: 1 0 auto;
    /*Pushes the content under the header*/
    padding-top: 60px;
}
/* ... */

